fixed dev brushstroke alignment

--- a/main.css
+++ b/main.css
@@ -117,9 +117,9 @@ body {
   width: 50px;
   height: 200px;
   position: relative;
-  left: 611px;
-  bottom: 500px;
-  transform: skew(-4deg, -17deg) rotate(65deg);
+  left: 471px;
+  bottom: 433px;
+  transform: skew(12deg, 335deg) rotate(308deg);
 }
 
 .projects {
